@@ -1,5 +1,7 @@
 package uk.gov.hmcts.reform.bailcaseapi.config;
 
+import java.nio.file.Path;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -8,15 +10,16 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.web.context.WebApplicationContext;
 
 import java.io.OutputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.setup.MockMvcBuilders.webAppContextSetup;
 
-@AutoConfigureMockMvc(addFilters = false)
+@AutoConfigureMockMvc
 @SpringJUnitConfig
 @SpringBootTest
 @ActiveProfiles("integration")
@@ -24,6 +27,14 @@ class OpenAPIPublisher {
 
     @Autowired
     private MockMvc mvc;
+
+    @Autowired
+    private WebApplicationContext wac;
+
+    @BeforeEach
+    void setUp() {
+        mvc = webAppContextSetup(wac).build();
+    }
 
     @DisplayName("Generate swagger documentation")
     @Test
@@ -34,7 +45,7 @@ class OpenAPIPublisher {
             .getResponse()
             .getContentAsByteArray();
 
-        try (OutputStream outputStream = Files.newOutputStream(Paths.get(
+        try (OutputStream outputStream = Files.newOutputStream(Path.of(
             System.getProperty("java.io.tmpdir"),
             "/swagger-specs.json"
         ))) {
